# canonicalwebteam.flask-base

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  renovate.json  requirements.txt  setup.py
.circleci/: config.yml
.github/workflows/: flask-base.yml  pr.yaml  publish.yaml  release-drafter.yml
canonicalwebteam/flask_base/: __init__.py  app.py  config.py  context.py  decorators.py  env.py  log_utils.py  logging.py  logs.py  metrics.py  observability.py  worker.py
canonicalwebteam/flask_base/middlewares/: ProxyFix.py  dev_log.py  proxy_fix.py  utm_redirect.py
canonicalwebteam/flask_base/opentelemetry/: metrics.py  tracing.py
tests/: deleted.yaml  redirects.yaml  test_flask_base.py  test_helpers.py  test_log_utils.py  test_logging.py  test_metrics.py  test_observability.py  test_tracing.py
tests/test_app/: humans.txt  permanent-redirects.yaml  robots.txt  security.txt
tests/test_app/webapp/: app.py
tests/test_app/webapp/static/: test.json
