[tool.poetry]
name = "canonicalwebteam.flask_base"
version = "0.2.0"
description = ""
authors = ["Canonical webteam <webteam@canonical.com>"]
packages = [{ include = "canonicalwebteam" }]

[tool.poetry.dependencies]
python = "^3"
"canonicalwebteam.yaml-responses" = {version = "^1.1", extras = ["flask"]}
flask = "1.0.2"
talisker = {version = "0.14.3", extras = ["gunicorn"]}

[tool.poetry.dev-dependencies]


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
