[tool.poetry]
name = 'canonicalwebteam.flask_base'
version = '0.4.3'
description = ''
authors = ['Canonical webteam <webteam@canonical.com>']
readme = 'README.md'

[[tool.poetry.packages]]
include = 'canonicalwebteam'

[tool.poetry.dependencies]
python = '^3.6'
flask = '^1'
Werkzeug = "< 1.1"

[tool.poetry.dependencies."canonicalwebteam.yaml-responses"]
version = '^1'
extras = ['flask']

[tool.poetry.dependencies.talisker]
version = "^0.16"
extras = [
    'gunicorn',
    'flask',
    'prometheus',
    'raven',
]

[tool.poetry.dev-dependencies]
flake8 = '*'
poetry-setup = '*'

[tool.poetry.dev-dependencies.black]
version = '*'
allow-prereleases = true

[build-system]
requires = ['poetry>=0.12']
build-backend = 'poetry.masonry.api'
